# SPADE-ENGINE

./: .gitignore  CMakeLists.txt  README.md
include/: CutScene.h  EasyScene.h  HardScene.h  MediumScene.h  MenuScene.h  StartScene.h  level_manager.h  player.h  score_manager.h  wire.h  wire_manager.h
src/: level_manager.cpp  main.cpp
src/Player/: player.cpp
src/Score/: score_manager.cpp
src/Wire/: wire.cpp  wire_manager.cpp
